sprint4/tests/error/21_list_slice_oob.py
# List slice out of bound. This behavior is different python
#
a = [1,2,3,4]
print(a[0:10])
